--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -1,2 +1,18 @@
-d-none
+.cicle_48
+    height: 48px
+    width: 48px
+    display: flex
+    justify-content: center
+    align-items: : center
+.d-none
     display: none
+
+.icon_20
+    height: 20px
+    width: 20px
+.icon_24
+    height: 24px
+    width: 24px
+.icon_48
+    height: 48px
+    width: 48px
