--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-root {
+:root {
   --color-text-main: #000000;
   --color-bg-main:#FFFFFF;
   --color-bg-second: #FCFCFC;
@@ -128,9 +128,11 @@ root {
 .cicle_48 {
   height: 48px;
   width: 48px;
+  border-radius: 50%;
+  background-color: var(--color-bg-icon);
   display: flex;
   justify-content: center;
-  align-: center;
+  align-items: center;
 }
 
 .d-none {
