--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -10,10 +10,27 @@
     width: 100vw
     object-fit: cover
 
-.h_resturant
+.h_restaurant
     padding: 0 16px
+
+.h_resturant_card
+    padding: 24px 0
+    display: flex
+    justify-content: space-between
     .h_rest_left
         height: 90px
         display: flex
         flex-direction: column
         justify-content: space-between
+    .h_res_right
+        gap: 8px
+        display: flex
+        justify-content: flex-end
+
+.h_restaurant_logo
+    position: relative
+    transform: translateY(-80%)
+    .h_pizza-logo
+        width: 100%
+        height: 100%
+        object-fit: cover
