--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -1,9 +1,11 @@
 .cicle_48
     height: 48px
     width: 48px
+    border-radius: 50%
+    background-color: var(--color-bg-icon) 
     display: flex
     justify-content: center
-    align-items: : center
+    align-items: center
 .d-none
     display: none
 
@@ -16,3 +18,6 @@
 .icon_48
     height: 48px
     width: 48px
+.icon_64
+    height: 64px
+    width: 64px
