--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -1,3 +1,9 @@
+.center
+    display: flex
+    justify-content: center
+    align-items: center
+.cicle
+    border-radius: 50%
 .cicle_48
     height: 48px
     width: 48px
@@ -9,15 +15,32 @@
 .d-none
     display: none
 
+.icon_16
+    height: 16px
+    width: 16px
 .icon_20
     height: 20px
     width: 20px
 .icon_24
     height: 24px
     width: 24px
+.icon_32
+    height: 32px
+    width: 32px
 .icon_48
     height: 48px
     width: 48px
 .icon_64
     height: 64px
     width: 64px
+
+.margin_r_8
+    margin-right: 8px
+.rotate
+    rotate: 90deg
+.t_14
+    font-size: 14px
+.t_alert
+    color: var(--color-text-alert)
+.t_underline
+    text-decoration: underline
