--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -4,6 +4,8 @@
     display: flex
     justify-content: space-around
     align-items: center
+    .h_menu_right
+        display: flex
 
 .h_img
     height: 144px
@@ -13,24 +15,35 @@
 .h_restaurant
     padding: 0 16px
 
+.h_restaurant_logo
+    position: relative
+    transform: translateY(-80%)
+    .h_pizza-logo
+        border: 1px solid var(--color-border)
+        border-radius: 20px
+        background-color: var(--color-border)
+        width: 100%
+        height: 100%
+        object-fit: cover 
+
 .h_resturant_card
+    min-height: calc(140px - 48px)
     padding: 24px 0
     display: flex
     justify-content: space-between
+    position: relative
+    transform: translateY(-50%)
     .h_rest_left
         height: 90px
         display: flex
         flex-direction: column
         justify-content: space-between
+        .h_rest_evaluation
+            margin-top: 16px
+            .h_res_delivery
+                margin-top: 8px
+                display: flex
     .h_res_right
         gap: 8px
         display: flex
         justify-content: flex-end
-
-.h_restaurant_logo
-    position: relative
-    transform: translateY(-80%)
-    .h_pizza-logo
-        width: 100%
-        height: 100%
-        object-fit: cover
