--- a/assets/scss/global/_colors.sass
+++ b/assets/scss/global/_colors.sass
@@ -1,8 +1,10 @@
 :root
     --color-text-main: #000000
+    --color-text-alert:#CF3102
     --color-bg-main:#FFFFFF
     --color-bg-second: #FCFCFC
     --color-bg-icon:#F5F3F1
     --color-bg-icon-hover:#E0E0E0
     --color-bg-icon-aktive:#D7D5D4
     --color-btn:#262626
+    --color-border:#efedea
