--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -4,14 +4,16 @@
     align-items: center
 .cicle
     border-radius: 50%
+.cicle_32
+    height: 32px
+    width: 32px
+    border-radius: 50%
+    background-color: var(--color-bg-icon) 
 .cicle_48
     height: 48px
     width: 48px
     border-radius: 50%
     background-color: var(--color-bg-icon) 
-    display: flex
-    justify-content: center
-    align-items: center
 .d-none
     display: none
 
