better code translatey

--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -14,10 +14,11 @@
 
 .h_restaurant
     padding: 0 16px
+    translatey: -25%
 
 .h_restaurant_logo
     position: relative
-    transform: translateY(-80%)
+    // transform: translateY(-80%)
     .h_pizza-logo
         border: 1px solid var(--color-border)
         border-radius: 20px
@@ -32,7 +33,7 @@
     display: flex
     justify-content: space-between
     position: relative
-    transform: translateY(-50%)
+    // transform: translateY(-50%)
     .h_rest_left
         height: 90px
         display: flex
