--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,11 +225,11 @@ body {
 
 .h_restaurant {
   padding: 0 16px;
+  translatey: -25%;
 }
 
 .h_restaurant_logo {
   position: relative;
-  transform: translateY(-80%);
 }
 .h_restaurant_logo .h_pizza-logo {
   border: 1px solid var(--color-border);
@@ -247,7 +247,6 @@ body {
   display: flex;
   justify-content: space-between;
   position: relative;
-  transform: translateY(-50%);
 }
 .h_resturant_card .h_rest_left {
   height: 90px;
