--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -7,6 +7,10 @@
     .h_menu_right
         display: flex
 
+
+.h_info_restaurant
+    height: 320px
+
 .h_img
     height: 144px
     width: 100vw
@@ -14,7 +18,7 @@
 
 .h_restaurant
     padding: 0 16px
-    translatey: -25%
+    translate: 0 -25%
 
 .h_restaurant_logo
     position: relative
