--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,10 @@ body {
   display: flex;
 }
 
+.h_info_restaurant {
+  height: 320px;
+}
+
 .h_img {
   height: 144px;
   width: 100vw;
@@ -225,7 +229,7 @@ body {
 
 .h_restaurant {
   padding: 0 16px;
-  translatey: -25%;
+  translate: 0 -25%;
 }
 
 .h_restaurant_logo {
