--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -17,12 +17,11 @@
     object-fit: cover
 
 .h_restaurant
-    padding: 0 16px
+    padding: var(--padding-0-16px)
     translate: 0 -25%
 
 .h_restaurant_logo
     position: relative
-    // transform: translateY(-80%)
     .h_pizza-logo
         border: 1px solid var(--color-border)
         border-radius: 20px
@@ -37,7 +36,6 @@
     display: flex
     justify-content: space-between
     position: relative
-    // transform: translateY(-50%)
     .h_rest_left
         height: 90px
         display: flex
