--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ body {
   --color-border:#efedea;
 }
 
+:root {
+  --padding-0-16px: 0 16px;
+}
+
 /* roboto-100 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -228,7 +232,7 @@ body {
 }
 
 .h_restaurant {
-  padding: 0 16px;
+  padding: var(--padding-0-16px);
   translate: 0 -25%;
 }
 
