--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -1,2 +1,26 @@
 nav
+    height: 56px
     padding: var(--padding-0-16px)
+    position: sticky
+    display: flex
+    align-items: center
+
+#navbar
+    overflow-x: scroll
+    display: flex
+
+    ul
+        display: flex
+        list-style: none
+
+        .nav_div
+            height: 32px
+            padding: 5px 12px
+            display: flex
+            justify-content: center
+            align-content: center
+
+            a
+                display: flex
+                justify-content: center
+                align-items: center
