--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -1,3 +1,5 @@
+.bold
+    font-weight: bold
 .center
     display: flex
     justify-content: center
@@ -5,8 +7,8 @@
 .cicle
     border-radius: 50%
 .cicle_32
-    height: 32px
-    width: 32px
+    min-height: 32px
+    min-width: 32px
     border-radius: 50%
     background-color: var(--color-bg-icon) 
 .cicle_48
