--- a/assets/scss/components/_main.sass
+++ b/assets/scss/components/_main.sass
@@ -1,2 +1,33 @@
 main
+    padding: var(--padding-0-16px)
     background-color: var(--color-bg-main)
+    box-shadow: 0 5px 5px inset var(--color-bg-icon-hover)
+
+.main_container
+    padding-top: 32px
+    .main_section_name
+        margin-top: 32px
+    .main_img
+        height: 88px
+        width: 100%
+        object-fit: cover
+        border-radius: var(--border-radius-12px)
+
+.main_section_card
+    margin-top: 16px
+    border: 1px solid var(--color-bg-icon-aktive)
+    border-radius: var(--border-radius-12px)
+    display: flex
+
+.main_section_menu
+    min-height: 92px
+    padding: 12px 56px 12px 12px
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+
+.main_section_icon
+    height: 32px
+    position: relative
+    top: 12px
+    right: 12px
