style menu_cards

--- a/assets/scss/components/_main.sass
+++ b/assets/scss/components/_main.sass
@@ -21,6 +21,7 @@ main
 
 .main_section_menu
     min-height: 92px
+    width: 100%
     padding: 12px 56px 12px 12px
     display: flex
     flex-direction: column
