--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -37,9 +37,12 @@
 .icon_64
     height: 64px
     width: 64px
-
+.margin_b_8
+    margin-bottom: 8px
 .margin_r_8
     margin-right: 8px
+.margin_t_8
+    margin-top: 8px
 .rotate
     rotate: 90deg
 .t_14
