--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,8 +194,16 @@ body {
   width: 64px;
 }
 
+.margin_b_8 {
+  margin-bottom: 8px;
+}
+
 .margin_r_8 {
   margin-right: 8px;
+}
+
+.margin_t_8 {
+  margin-top: 8px;
 }
 
 .rotate {
@@ -338,6 +346,7 @@ main {
 
 .main_section_menu {
   min-height: 92px;
+  width: 100%;
   padding: 12px 56px 12px 12px;
   display: flex;
   flex-direction: column;
