--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -9,11 +9,11 @@
 
 
 .h_info_restaurant
-    height: 320px
+    height: 340px
 
 .h_img
     height: 144px
-    width: 100vw
+    width: 100%
     object-fit: cover
 
 .h_restaurant
