cleanCode sass/scss

--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -19,24 +19,26 @@
 .d-none
     display: none
 
-.icon_16
-    height: 16px
-    width: 16px
-.icon_20
-    height: 20px
-    width: 20px
-.icon_24
-    height: 24px
-    width: 24px
-.icon_32
-    height: 32px
-    width: 32px
-.icon_48
-    height: 48px
-    width: 48px
-.icon_64
-    height: 64px
-    width: 64px
+.icon
+    &_16
+        height: 16px
+        // width: 16px
+        aspect-ratio: 1 //Seitenverhältnis 1=1x1 ; <1=1x0,5 ; >1=1x1,5
+    &_20
+        height: 20px
+        width: 20px
+    &_24
+        height: 24px
+        width: 24px
+    &_32
+        height: 32px
+        width: 32px
+    &_48
+        height: 48px
+        width: 48px
+    &_64
+        height: 64px
+        width: 64px
 .margin_b_8
     margin-bottom: 8px
 .margin_r_8
