--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -43,6 +43,8 @@
         justify-content: space-between
         .h_rest_evaluation
             margin-top: 16px
+            .h_rest_prerequisite
+                gap: 3px
             .h_res_delivery
                 margin-top: 8px
                 display: flex
