fix sticky navbar

--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -1,9 +1,12 @@
 nav
     height: 56px
+    background-color: var(--color-bg-main)
     padding: var(--padding-0-16px)
     position: sticky
+    top: 0
     display: flex
     align-items: center
+    z-index: 6
 
 #navbar
     overflow-x: scroll
