--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,10 +292,13 @@ body {
 
 nav {
   height: 56px;
+  background-color: var(--color-bg-main);
   padding: var(--padding-0-16px);
   position: sticky;
+  top: 0;
   display: flex;
   align-items: center;
+  z-index: 6;
 }
 
 #navbar {
