--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -18,6 +18,8 @@
     background-color: var(--color-bg-icon) 
 .d-none
     display: none
+.heigth_32
+    height: 32px
 .icon
     &_16
         height: 16px
