--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -4,8 +4,15 @@
     display: flex
     justify-content: space-between
     align-items: center
+    &_left
+        width: 30%
+    &_center
+        width: 60%
+        text-align: center
     &_right
+        width: 30%
         display: flex
+        justify-content: flex-end
     &_select_lang
         display: none
     &_logo-text
@@ -60,8 +67,6 @@
 @media screen and ( min-width: 720px )
     .h_menu
         &_logo
-            display: none
-        &_logo-arrow
             display: none
         &_logo-text
             display: flex
