--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -19,8 +19,8 @@
         display: none
 
 
-.h_info_restaurant
-    height: 340px
+// .h_info_restaurant
+//     height: 340px
 
 .h_img
     height: 144px
@@ -71,4 +71,6 @@
         &_logo-text
             display: flex
         &_select_lang
-            display: flex   
+            display: flex
+    .h_img
+        height: 320px
