--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -1,6 +1,6 @@
 nav
     height: 56px
-    background-color: var(--color-bg-main)
+    background-color: var(--color-bg-header)
     padding: var(--padding-0-16px)
     position: sticky
     top: 0
