responsiv header nav bucket

--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -18,16 +18,13 @@
     &_logo-text
         display: none
 
-
-// .h_info_restaurant
-//     height: 340px
-
 .h_img
     height: 144px
     width: 100%
     object-fit: cover
 
 .h_restaurant
+    max-width: 960px
     padding: var(--padding-0-16px)
     translate: 0 -25%
 
