--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,7 @@ body {
 }
 
 .h_restaurant {
+  max-width: 960px;
   padding: var(--padding-0-16px);
   translate: 0 -25%;
 }
@@ -328,11 +329,21 @@ nav {
   display: flex;
   align-items: center;
   z-index: 6;
+  box-shadow: 0 5px 5px var(--color-bg-icon-hover);
+}
+
+.nav_section {
+  max-width: 960px;
+  width: 100%;
+  display: flex;
+}
+.nav_section_icon {
+  min-width: 40px;
 }
 
 #navbar {
-  overflow-x: scroll;
   display: flex;
+  overflow-x: scroll;
 }
 #navbar ul {
   display: flex;
@@ -352,9 +363,9 @@ nav {
 }
 
 main {
+  margin-bottom: 32px;
   padding: var(--padding-0-16px);
   background-color: var(--color-bg-main);
-  box-shadow: 0 5px 5px inset var(--color-bg-icon-hover);
 }
 
 .main_container {
@@ -403,7 +414,6 @@ main {
 }
 
 footer {
-  margin-top: 32px;
   padding: 12px 16px;
   background-color: var(--color-border);
 }
@@ -414,4 +424,31 @@ footer .footer_legal {
 }
 footer .copyright {
   padding: 8px 0 12px 0;
+}
+
+.header_nav_main {
+  display: flex;
+  flex-direction: column;
+}
+
+.bucket {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .bucket_main {
+    display: flex;
+  }
+  .bucket {
+    height: 100vh;
+    min-width: 344px;
+    padding: 24px 16px;
+    position: sticky;
+    top: 0;
+    right: 0;
+    background-color: var(--color-bg-header);
+    box-shadow: 0px 4px 6px 0px rgba(27, 35, 36, 0.02), 0px 2px 12px -2px rgba(27, 35, 36, 0.08), 0px 3px 6px 0px rgba(27, 35, 36, 0.06);
+    z-index: 10;
+    display: flex;
+  }
 }
