--- a/assets/scss/components/_main.sass
+++ b/assets/scss/components/_main.sass
@@ -1,7 +1,8 @@
 main
+    margin-bottom: 32px
     padding: var(--padding-0-16px)
     background-color: var(--color-bg-main)
-    box-shadow: 0 5px 5px inset var(--color-bg-icon-hover)
+    // box-shadow: 0 5px 5px inset var(--color-bg-icon-hover)
 
 .main_container
     padding-top: 32px
