responsiv header nav main >1340px

--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -34,3 +34,9 @@ nav
                 display: flex
                 justify-content: center
                 align-items: center
+
+@media screen and ( min-width: 1340px )
+    nav
+        justify-content: center
+    .nav_section
+        width: 960px
