--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,6 +320,16 @@ body {
     height: 320px;
   }
 }
+@media screen and (min-width: 1340px) {
+  .h_info_restaurant {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .h_restaurant {
+    width: 960px;
+  }
+}
 nav {
   height: 56px;
   background-color: var(--color-bg-header);
@@ -362,10 +372,24 @@ nav {
   align-items: center;
 }
 
+@media screen and (min-width: 1340px) {
+  nav {
+    justify-content: center;
+  }
+  .nav_section {
+    width: 960px;
+  }
+}
 main {
   margin-bottom: 32px;
-  padding: var(--padding-0-16px);
   background-color: var(--color-bg-main);
+  display: flex;
+  justify-content: center;
+}
+
+#main {
+  padding: var(--padding-0-16px);
+  max-width: 960px;
 }
 
 .main_container {
@@ -427,6 +451,7 @@ footer .copyright {
 }
 
 .header_nav_main {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
