--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -71,3 +71,11 @@
             display: flex
     .h_img
         height: 320px
+
+@media screen and ( min-width: 1340px )
+    .h_info_restaurant
+        display: flex
+        flex-direction: column
+        align-items: center
+    .h_restaurant
+        width: 960px
