--- a/assets/scss/components/_main.sass
+++ b/assets/scss/components/_main.sass
@@ -1,8 +1,13 @@
 main
     margin-bottom: 32px
-    padding: var(--padding-0-16px)
     background-color: var(--color-bg-main)
     // box-shadow: 0 5px 5px inset var(--color-bg-icon-hover)
+    display: flex
+    justify-content: center
+#main
+    padding: var(--padding-0-16px)
+    max-width: 960px
+
 
 .main_container
     padding-top: 32px
@@ -39,3 +44,7 @@ main
     top: 12px
     right: 12px
     z-index: 5
+
+@media screen and ( min-width: 1340px )
+    #main
+        // width: 960px
