--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -48,6 +48,8 @@
     margin-top: 8px
 .padding_t_b_12
     padding: 12px 0
+.padding_8_12px
+    padding: 8px 12px
 .rotate
     rotate: 90deg
 .t_14
