--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,10 @@ body {
   padding: 12px 0;
 }
 
+.padding_8_12px {
+  padding: 8px 12px;
+}
+
 .rotate {
   rotate: 90deg;
 }
@@ -447,15 +451,29 @@ footer {
   padding: 12px 16px;
   background-color: var(--color-border);
 }
-footer .footer_legal {
+
+.footer_legal {
   padding-bottom: 8px;
   display: flex;
   flex-direction: column;
 }
-footer .copyright {
+
+.copyright {
   padding: 8px 0 12px 0;
 }
 
+@media screen and (min-width: 1024px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer_legal {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 .header_nav_main {
   width: 100%;
   display: flex;
