--- a/assets/scss/components/_footer.sass
+++ b/assets/scss/components/_footer.sass
@@ -1,9 +1,21 @@
 footer
     padding: 12px 16px
     background-color: var(--color-border)
-    .footer_legal
-        padding-bottom: 8px
+    
+.footer_legal
+    padding-bottom: 8px
+    display: flex
+    flex-direction: column
+
+.copyright
+    padding: 8px 0 12px 0
+
+@media screen and ( min-width: 1024px )
+    footer
         display: flex
         flex-direction: column
-    .copyright
-        padding: 8px 0 12px 0
+        align-items: center
+    .footer_legal
+        flex-direction: row
+        flex-wrap: wrap
+        justify-content: center
