--- a/assets/scss/components/_footer.sass
+++ b/assets/scss/components/_footer.sass
@@ -12,6 +12,7 @@ footer
 
 @media screen and ( min-width: 1024px )
     footer
+        padding: 16px 32px 24px
         display: flex
         flex-direction: column
         align-items: center
