--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -4,6 +4,9 @@
     display: flex
     justify-content: space-between
     align-items: center
+    box-shadow: 0 3px 10px var(--color-bg-icon-aktive)
+    position: relative
+    z-index: 15
     &_left
         width: 30%
     &_center
@@ -22,6 +25,7 @@
     height: 144px
     width: 100%
     object-fit: cover
+    z-index: 16
 
 .h_restaurant
     max-width: 960px
