--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,11 @@ body {
   display: none;
 }
 
+.h_info_restaurant {
+  display: flex;
+  flex-direction: column;
+}
+
 .h_img {
   height: 144px;
   width: 100%;
@@ -270,6 +275,7 @@ body {
   max-width: 960px;
   padding: var(--padding-0-16px);
   translate: 0 -25%;
+  z-index: 17;
 }
 
 .h_restaurant_logo {
@@ -330,8 +336,6 @@ body {
 }
 @media screen and (min-width: 1340px) {
   .h_info_restaurant {
-    display: flex;
-    flex-direction: column;
     align-items: center;
   }
   .h_restaurant {
