--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -20,7 +20,9 @@
         display: none
     &_logo-text
         display: none
-
+.h_info_restaurant
+    display: flex
+    flex-direction: column
 .h_img
     height: 144px
     width: 100%
@@ -31,6 +33,7 @@
     max-width: 960px
     padding: var(--padding-0-16px)
     translate: 0 -25%
+    z-index: 17
 
 .h_restaurant_logo
     position: relative
@@ -78,8 +81,6 @@
 
 @media screen and ( min-width: 1340px )
     .h_info_restaurant
-        display: flex
-        flex-direction: column
         align-items: center
     .h_restaurant
         width: 960px
