--- a/assets/scss/components/_header.sass
+++ b/assets/scss/components/_header.sass
@@ -6,6 +6,9 @@
     align-items: center
     box-shadow: 0 3px 10px var(--color-bg-icon-aktive)
     position: relative
+    top: 0
+    right: 0
+    left: 0
     z-index: 15
     &_left
         width: 30%
