--- a/assets/scss/components/_bucket.sass
+++ b/assets/scss/components/_bucket.sass
@@ -5,21 +5,25 @@
 
 .bucket
   display: none
+  height: 100vh
+  min-width: calc(344px - 32px)
+  padding: 24px 16px
+  position: sticky
+  top: 0
+  right: 0
+  background-color: var(--color-bg-header)
+  // box-shadow: -3px 0 3px var(--color-bg-icon-hover), 0 2px 12px inset var(--color-bg-icon-hover)
+  box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
+  z-index: 10
+  flex-direction: column
+
+.title
+  text-align: center
 
 @media screen and ( min-width: 1024px )
   .bucket_main
     display: flex
 
   .bucket
-    height: 100vh
-    min-width: 344px
-    padding: 24px 16px
-    position: sticky
-    top: 0
-    right: 0
-    background-color: var(--color-bg-header)
-    // box-shadow: -3px 0 3px var(--color-bg-icon-hover), 0 2px 12px inset var(--color-bg-icon-hover)
-    box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
-    z-index: 10
     display: flex
   
