--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,6 +510,17 @@ footer {
   text-align: center;
 }
 
+.bucket-list_empty {
+  padding: 80px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.bucket-list_empty p {
+  text-align: center;
+}
+
 @media screen and (min-width: 1024px) {
   .bucket_main {
     display: flex;
