--- a/assets/scss/components/_bucket.sass
+++ b/assets/scss/components/_bucket.sass
@@ -20,6 +20,15 @@
 .title
   text-align: center
 
+.bucket-list_empty
+  padding: 80px 16px
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  p
+    text-align: center
+
 @media screen and ( min-width: 1024px )
   .bucket_main
     display: flex
