--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -3,7 +3,7 @@
   display: flex
   flex-direction: column
 
-.bucket
+.basket
   display: none
   height: 100vh
   min-width: calc(344px - 32px)
@@ -20,7 +20,7 @@
 .title
   text-align: center
 
-.bucket-list_empty
+.basket-list_empty
   padding: 80px 16px
   display: flex
   flex-direction: column
@@ -32,7 +32,7 @@
 @media screen and ( min-width: 1024px )
   .bucket_main
     display: flex
-
-  .bucket
+    
+  .basket
     display: flex
   
