style :hover :active

--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -13,8 +13,10 @@ nav
     max-width: 960px
     width: 100%
     display: flex
+    align-items: center
     &_icon
-        min-width: 40px
+        width: 32px
+        justify-content: center
 #navbar
     display: flex
     overflow-x: scroll
