--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,14 +145,14 @@ body {
 .cicle {
   border-radius: 50%;
 }
-
 .cicle_32 {
   min-height: 32px;
+  height: 32px;
   min-width: 32px;
+  width: 32px;
   border-radius: 50%;
   background-color: var(--color-bg-icon);
 }
-
 .cicle_48 {
   height: 48px;
   width: 48px;
@@ -160,8 +160,29 @@ body {
   background-color: var(--color-bg-icon);
 }
 
+.cursor_default {
+  cursor: default;
+}
+.cursor_pointer {
+  cursor: pointer;
+}
+
 .d-none {
   display: none;
+}
+
+.effekt:hover {
+  background-color: var(--color-bg-icon-hover);
+  cursor: pointer;
+}
+.effekt:active {
+  background-color: var(--color-bg-icon-aktive);
+  cursor: pointer;
+}
+
+.effekt_t_deco-underline:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .heigth_32 {
@@ -196,11 +217,9 @@ body {
 .margin_b_8 {
   margin-bottom: 8px;
 }
-
 .margin_r_8 {
   margin-right: 8px;
 }
-
 .margin_t_8 {
   margin-top: 8px;
 }
@@ -208,7 +227,6 @@ body {
 .padding_t_b_12 {
   padding: 12px 0;
 }
-
 .padding_8_12px {
   padding: 8px 12px;
 }
@@ -227,6 +245,10 @@ body {
 
 .t_underline {
   text-decoration: underline;
+  cursor: pointer;
+}
+.t_underline:hover {
+  text-decoration: none;
 }
 
 .h_menu {
@@ -361,9 +383,11 @@ nav {
   max-width: 960px;
   width: 100%;
   display: flex;
+  align-items: center;
 }
 .nav_section_icon {
-  min-width: 40px;
+  width: 32px;
+  justify-content: center;
 }
 
 #navbar {
@@ -504,6 +528,22 @@ footer {
   box-shadow: 0px 4px 6px 0px rgba(27, 35, 36, 0.02), 0px 2px 12px -2px rgba(27, 35, 36, 0.08), 0px 3px 6px 0px rgba(27, 35, 36, 0.06);
   z-index: 10;
   flex-direction: column;
+}
+.basket_card {
+  padding: 16px 0;
+  gap: 16px;
+  display: flex;
+}
+.basket_card_price {
+  white-space: nowrap;
+}
+.basket_edit {
+  display: flex;
+  gap: 16px;
+}
+
+.basket_content {
+  width: 100%;
 }
 
 .title {
