--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -16,7 +16,18 @@
   box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
   z-index: 10
   flex-direction: column
+  &_card
+    padding: 16px 0
+    gap: 16px
+    display: flex
+    &_price
+      white-space: nowrap
+  &_edit
+    display: flex
+    gap: 16px
 
+.basket_content
+  width: 100%
 .title
   text-align: center
 
@@ -32,7 +43,7 @@
 @media screen and ( min-width: 1024px )
   .bucket_main
     display: flex
-    
+
   .basket
     display: flex
   
