--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -25,7 +25,13 @@
   &_edit
     display: flex
     gap: 16px
-
+    padding: 8px 0 16px 0 
+  &_invoice
+    padding-top: 16px
+    display: flex
+    flex-direction: column
+  &_btn
+    margin-top: 16px
 .basket_content
   width: 100%
 .title
