--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -23,6 +23,10 @@
         cursor: default
     &_pointer
         cursor: pointer
+
+.d-flex-spabeet
+    display: flex
+    justify-content: space-between
 .d-none
     display: none
 .effekt
