--- a/assets/scss/global/_colors.sass
+++ b/assets/scss/global/_colors.sass
@@ -9,5 +9,5 @@
     --color-bg-icon-hover:#E0E0E0
     --color-bg-icon-aktive:#D7D5D4
 
-    --color-btn:#262626
+    --color-btn:#f36805
     --color-border:#efedea
