--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -12,7 +12,6 @@
   top: 0
   right: 0
   background-color: var(--color-bg-header)
-  // box-shadow: -3px 0 3px var(--color-bg-icon-hover), 0 2px 12px inset var(--color-bg-icon-hover)
   box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
   z-index: 10
   flex-direction: column
@@ -45,6 +44,14 @@
   justify-content: center
   p
     text-align: center
+
+.basket_btn
+  height: 48px
+  background-color: var(--color-btn)
+  font-size: 20px
+  color: var(--color-bg-header)
+  border: none
+  border-radius: var(--border-radius-50)
 
 @media screen and ( min-width: 1024px )
   .bucket_main
