--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -45,8 +45,24 @@
   p
     text-align: center
 
+.open_Basket
+  position: fixed
+  right: 0
+  left: 0
+  bottom: 0 
+  height: 70px
+  padding: 8px 8px 32px 8px
+  background-color: var(--color-bg-header)
+  border: 1px solid var(--color-bg-icon-aktive)
+  display: flex
+  justify-content: center
+  align-items: center
+
+.footer_margin_btn
+  margin-bottom: 112px
 .basket_btn
   height: 48px
+  width: 100%
   background-color: var(--color-btn)
   font-size: 20px
   color: var(--color-bg-header)
