--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -54,9 +54,10 @@
   padding: 8px 8px 32px 8px
   background-color: var(--color-bg-header)
   border: 1px solid var(--color-bg-icon-aktive)
-  display: flex
+  // display: flex
   justify-content: center
   align-items: center
+  z-index: 5
 
 .footer_margin_btn
   margin-bottom: 112px
@@ -70,6 +71,11 @@
   border-radius: var(--border-radius-50)
 
 @media screen and ( min-width: 1024px )
+  .footer_margin_btn
+    margin-bottom: 0
+  .open_Basket
+    display: none
+  
   .bucket_main
     display: flex
 
