style basket mobile & desktop

--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -27,6 +27,8 @@
 .d-flex-spabeet
     display: flex
     justify-content: space-between
+.d-flex
+    display: flex
 .d-none
     display: none
 .effekt
