--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,10 @@ body {
   justify-content: space-between;
 }
 
+.d-flex {
+  display: flex;
+}
+
 .d-none {
   display: none;
 }
@@ -523,22 +527,28 @@ footer {
 }
 
 .basket {
-  display: none;
   height: 100vh;
-  min-width: 312px;
+  background-color: var(--color-bg-header);
   padding: 24px 16px;
-  position: sticky;
+  position: fixed;
   top: 0;
   right: 0;
+  left: 0;
+  bottom: 0;
   background-color: var(--color-bg-header);
   box-shadow: 0px 4px 6px 0px rgba(27, 35, 36, 0.02), 0px 2px 12px -2px rgba(27, 35, 36, 0.08), 0px 3px 6px 0px rgba(27, 35, 36, 0.06);
-  z-index: 10;
+  z-index: 20;
   flex-direction: column;
 }
 .basket_card {
   padding: 16px 0;
   gap: 16px;
   display: flex;
+  justify-content: space-between;
+}
+.basket_card_card_left {
+  display: flex;
+  gap: 8px;
 }
 .basket_card_price {
   white-space: nowrap;
@@ -555,6 +565,11 @@ footer {
 }
 .basket_btn {
   margin-top: 16px;
+}
+
+#basket_title {
+  display: flex;
+  justify-content: space-between;
 }
 
 .basket_content {
@@ -616,5 +631,42 @@ footer {
   }
   .basket {
     display: flex;
+    height: 100vh;
+    min-width: 312px;
+    padding: 24px 16px;
+    position: sticky;
+    top: 0;
+    right: 0;
+    background-color: var(--color-bg-header);
+    box-shadow: 0px 4px 6px 0px rgba(27, 35, 36, 0.02), 0px 2px 12px -2px rgba(27, 35, 36, 0.08), 0px 3px 6px 0px rgba(27, 35, 36, 0.06);
+    z-index: 10;
+    flex-direction: column;
+  }
+  .basket_card {
+    padding: 16px 0;
+    gap: 16px;
+    display: flex;
+  }
+  .basket_card_price {
+    white-space: nowrap;
+  }
+  .basket_edit {
+    display: flex;
+    gap: 16px;
+    padding: 8px 0 16px 0;
+  }
+  .basket_invoice {
+    padding-top: 16px;
+    display: flex;
+    flex-direction: column;
+  }
+  .basket_btn {
+    margin-top: 16px;
+  }
+  #basket_title {
+    justify-content: center;
+  }
+  .basket_title_close {
+    display: none;
   }
 }
