--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -4,21 +4,28 @@
   flex-direction: column
 
 .basket
-  display: none
+  // display: flex
   height: 100vh
-  min-width: calc(344px - 32px)
+  // min-width: calc(344px - 32px)
+  background-color: var(--color-bg-header)
   padding: 24px 16px
-  position: sticky
+  position: fixed
   top: 0
   right: 0
+  left: 0
+  bottom: 0
   background-color: var(--color-bg-header)
   box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
-  z-index: 10
+  z-index: 20
   flex-direction: column
   &_card
     padding: 16px 0
     gap: 16px
     display: flex
+    justify-content: space-between
+    &_card_left
+      display: flex
+      gap: 8px
     &_price
       white-space: nowrap
   &_edit
@@ -31,6 +38,9 @@
     flex-direction: column
   &_btn
     margin-top: 16px
+#basket_title
+  display: flex
+  justify-content: space-between
 .basket_content
   width: 100%
 .title
@@ -81,4 +91,34 @@
 
   .basket
     display: flex
-  
+    height: 100vh
+    min-width: calc(344px - 32px)
+    padding: 24px 16px
+    position: sticky
+    top: 0
+    right: 0
+    background-color: var(--color-bg-header)
+    box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
+    z-index: 10
+    flex-direction: column
+    &_card
+      padding: 16px 0
+      gap: 16px
+      display: flex
+      &_price
+        white-space: nowrap
+    &_edit
+      display: flex
+      gap: 16px
+      padding: 8px 0 16px 0 
+    &_invoice
+      padding-top: 16px
+      display: flex
+      flex-direction: column
+    &_btn
+      margin-top: 16px
+
+  #basket_title
+    justify-content: center
+  .basket_title_close
+    display: none
