stayle basket mobile & desktop scrollbar

--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -71,6 +71,8 @@
         margin-right: 8px
     &_t_8
         margin-top: 8px
+.overflow
+    overflow-y: hidden
 .padding
     &_t_b_12
         padding: 12px 0
