--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,10 @@ body {
   margin-top: 8px;
 }
 
+.overflow {
+  overflow-y: hidden;
+}
+
 .padding_t_b_12 {
   padding: 12px 0;
 }
@@ -527,7 +531,9 @@ footer {
 }
 
 .basket {
-  height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100vh - 50px);
   background-color: var(--color-bg-header);
   padding: 24px 16px;
   position: fixed;
@@ -538,7 +544,7 @@ footer {
   background-color: var(--color-bg-header);
   box-shadow: 0px 4px 6px 0px rgba(27, 35, 36, 0.02), 0px 2px 12px -2px rgba(27, 35, 36, 0.08), 0px 3px 6px 0px rgba(27, 35, 36, 0.06);
   z-index: 20;
-  flex-direction: column;
+  overflow-y: scroll;
 }
 .basket_card {
   padding: 16px 0;
@@ -546,7 +552,7 @@ footer {
   display: flex;
   justify-content: space-between;
 }
-.basket_card_card_left {
+.basket_card_left {
   display: flex;
   gap: 8px;
 }
@@ -631,7 +637,7 @@ footer {
   }
   .basket {
     display: flex;
-    height: 100vh;
+    height: calc(100vh - 50px);
     min-width: 312px;
     padding: 24px 16px;
     position: sticky;
