--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -5,7 +5,9 @@
 
 .basket
   // display: flex
-  height: 100vh
+  flex-direction: column
+  justify-content: space-between
+  height: calc(100vh - 50px)
   // min-width: calc(344px - 32px)
   background-color: var(--color-bg-header)
   padding: 24px 16px
@@ -17,13 +19,13 @@
   background-color: var(--color-bg-header)
   box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
   z-index: 20
-  flex-direction: column
+  overflow-y: scroll
   &_card
     padding: 16px 0
     gap: 16px
     display: flex
     justify-content: space-between
-    &_card_left
+    &_left
       display: flex
       gap: 8px
     &_price
@@ -91,7 +93,7 @@
 
   .basket
     display: flex
-    height: 100vh
+    height: calc(100vh - 50px )
     min-width: calc(344px - 32px)
     padding: 24px 16px
     position: sticky
