--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -647,6 +647,7 @@ footer {
     box-shadow: 0px 4px 6px 0px rgba(27, 35, 36, 0.02), 0px 2px 12px -2px rgba(27, 35, 36, 0.08), 0px 3px 6px 0px rgba(27, 35, 36, 0.06);
     z-index: 10;
     flex-direction: column;
+    justify-content: flex-start;
   }
   .basket_card {
     padding: 16px 0;
