--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -103,6 +103,7 @@
     box-shadow: 0px 4px 6px 0px rgba(27,35,36,0.02),0px 2px 12px -2px rgba(27,35,36,0.08),0px 3px 6px 0px rgba(27,35,36,0.06),
     z-index: 10
     flex-direction: column
+    justify-content: flex-start
     &_card
       padding: 16px 0
       gap: 16px
