add html smooth

--- a/assets/scss/global/_components.sass
+++ b/assets/scss/global/_components.sass
@@ -44,6 +44,9 @@
         text-decoration: underline
 .heigth_32
     height: 32px
+.href-none
+    text-decoration: none
+    color: black
 .icon
     &_16
         height: 16px
