--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -197,6 +201,11 @@ body {
 
 .heigth_32 {
   height: 32px;
+}
+
+.href-none {
+  text-decoration: none;
+  color: black;
 }
 
 .icon_16 {
@@ -425,6 +434,26 @@ nav {
   align-items: center;
 }
 
+.navbar_btn {
+  padding: 5px 12px;
+  border: none;
+  border-radius: var(--border-radius-50);
+  background: var(--color-bg-header);
+  cursor: pointer;
+}
+.navbar_btn:hover {
+  background-color: var(--color-bg-icon);
+}
+.navbar_btn:focus {
+  background-color: var(--color-text-main);
+  color: var(--color-bg-header);
+}
+
+@media screen and (min-width: 720px) {
+  #navbar {
+    overflow-x: hidden;
+  }
+}
 @media screen and (min-width: 1340px) {
   nav {
     justify-content: center;
