--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -37,6 +37,21 @@ nav
                 justify-content: center
                 align-items: center
 
+.navbar_btn
+    padding: 5px 12px
+    border: none
+    border-radius: var(--border-radius-50)
+    background: var(--color-bg-header)
+    cursor: pointer
+    &:hover
+        background-color: var(--color-bg-icon)
+    &:focus
+        background-color: var(--color-text-main)
+        color: var(--color-bg-header)
+
+@media screen and ( min-width: 720px )
+    #navbar
+        overflow-x: hidden
 @media screen and ( min-width: 1340px )
     nav
         justify-content: center
