--- a/assets/scss/components/_basket.sass
+++ b/assets/scss/components/_basket.sass
@@ -95,6 +95,8 @@
     display: flex
     height: calc(100vh - 50px )
     min-width: calc(344px - 32px)
+    width: calc(344px - 32px)
+    max-width: calc(344px - 32px)
     padding: 24px 16px
     position: sticky
     top: 0
