--- a/assets/scss/components/_navbar.sass
+++ b/assets/scss/components/_navbar.sass
@@ -45,9 +45,9 @@ nav
     cursor: pointer
     &:hover
         background-color: var(--color-bg-icon)
-    &:focus
-        background-color: var(--color-text-main)
-        color: var(--color-bg-header)
+    // &:focus
+    //     background-color: var(--color-text-main)
+    //     color: var(--color-bg-header)
 
 @media screen and ( min-width: 720px )
     #navbar
