--- a/assets/scss/components/_main.sass
+++ b/assets/scss/components/_main.sass
@@ -11,6 +11,7 @@ main
 
 .main_container
     padding-top: 32px
+    scroll-margin-top: 30px
     .main_section_name
         margin-top: 32px
     
